# palimpsest

./: Cargo.toml
assets/shaders/: animate_shader.wgsl  pbr.wgsl
assets/shaders/compute_rasterizer/: present_pass.wgsl  raster_pass.wgsl
src/: main.rs
src/camera/: pan_orbit_camera.rs
src/events/: mod.rs
src/material/: animated_material.rs  game_of_life.rs  mod.rs  shader_material.rs
src/plugins/: mod.rs  mouse.rs
src/plugins/pixel_buffer/: builder.rs  bundle.rs  compute_shader.rs  frame.rs  mod.rs  pixel.rs  pixel_buffer.rs  queries.rs
