[package]
name = "bevy_101"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = {git = "https://github.com/bevyengine/bevy", features = ["dynamic", "filesystem_watcher"]}
# leafwing-input-manager = "0.4.1"
bitflags = "1.3.2"
rayon = "1.5.3"
bytemuck = { version = "1.10", features = ["derive"] }
thiserror = "1.0.32"
rand = "0.8.5"